Bug 871747 - Load the TrackElement outside the document. r=rillian

MozReview-Commit-ID: Cql1YAZnnnL

--HG--
extra : transplant_source : %FA%21%D1%8A%14%E6%BA%8A%91H%F0%EE%CB%7B%AB9%19%20%2A%C2